i can get access to igdb
i can send a request in post to get a list of games from igdb

--- a/g-list/index.html
+++ b/g-list/index.html
@@ -11,6 +11,7 @@
     ></script>
     <script src="js/config.js"></script>
     <script src="js/requettes.js"></script>
+    <script src="js/server.js"></script>
   </head>
   <body>
     <div><p id="test"></p></div>
