fixed CORS errors
used the module cors to bypase cors errors for all routes

--- a/g-list/index.html
+++ b/g-list/index.html
@@ -10,10 +10,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/config.js"></script>
-    <script src="js/requettes.js"></script>
     <script src="js/server.js"></script>
   </head>
   <body>
     <div><p id="test"></p></div>
+    <button onclick="getGame()">click</button>
   </body>
 </html>
